[package]
name = "connection-example-using-quinn-fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { git = "https://github.com/ventos/quinn.git" }
tokio = { version = "1.41.0", features = ["sync","macros","io-util","rt","time"] }
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rcgen = "0.13"
